fix: side menu collapsed item visibility (#1387)

--- a/packages/uhk-web/src/app/components/side-menu/side-menu.component.scss
+++ b/packages/uhk-web/src/app/components/side-menu/side-menu.component.scss
@@ -29,6 +29,7 @@ a {
 ul {
     padding: 0;
     margin: 0;
+    overflow: hidden;
 
     li {
         list-style: none;
